--- a/.github/workflows/publish-github-action.yml
+++ b/.github/workflows/publish-github-action.yml
@@ -60,6 +60,4 @@ jobs:
           echo "Publishing GitHub Action release for tag ${{ github.ref_name }}"
           gh release create "${{ github.ref_name }}" \
             --title "${{ github.ref_name }}" \
-            --notes <<EOF
-      ${{ steps.release_notes.outputs.result }}
-      EOF
+            --notes "${{ steps.release_notes.outputs.result }}"
