--- a/.github/workflows/publish-github-action.yml
+++ b/.github/workflows/publish-github-action.yml
@@ -33,31 +33,13 @@ jobs:
           fi
           echo "Tag found: $TAG"
 
-      - name: Generate Release Notes
-        id: release_notes
-        uses: actions/github-script@v7
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          script: |
-            const tag = context.ref.replace('refs/tags/', '');
-            const { data: commits } = await github.rest.repos.listCommits({
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              sha: tag,
-              per_page: 100,
-            });
-
-            // Extract commit titles
-            const commitTitles = commits.map(commit => `- ${commit.commit.message.split('\n')[0]}`);
-            const releaseNotes = `## Release Notes for ${tag}\n\n${commitTitles.join('\n')}`;
-            return releaseNotes;
-
       - name: Publish Release
+        uses: elgohr/Github-Release-Action@v5
+        permissions:
+          packages: write
+          contents: write
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: |
-          echo "Publishing GitHub Action release for tag ${{ github.ref_name }}"
-          gh release create "${{ github.ref_name }}" \
-            --title "${{ github.ref_name }}" \
-            --notes "${{ steps.release_notes.outputs.result }}"
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          title: "Release-${{ github.ref_name }}"
+          prerelease: true
