feat: update release title
simplifies release title name

--- a/.github/workflows/publish-github-action.yml
+++ b/.github/workflows/publish-github-action.yml
@@ -41,5 +41,5 @@ jobs:
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          title: "Release-${{ github.ref_name }}"
+          title: "${{ github.ref_name }}"
           prerelease: true
