--- a/action.yml
+++ b/action.yml
@@ -91,8 +91,10 @@ runs:
       shell: bash
     - name: test
       run: |
+        echo "::group::test"
         pwd
         ls
+        echo "::endgroup::"
       shell: bash
     - name: Set Verbose Flag
       run: |
